# ProgettoPAO

./: Artigliere.cpp  Artigliere.h  CMakeLists.txt  Giocatore.cpp  Giocatore.h  Kill.cpp  Kill.h  List.cpp  List.h  Lupo.cpp  Lupo.h  Medico.cpp  Medico.h  Medium.cpp  Medium.h  Personaggio.cpp  Personaggio.h  Saver.cpp  Saver.h  Seer.cpp  Seer.h  Veggente.cpp  Veggente.h  main.cpp
FileCPP/: Artigliere.cpp  Giocatore.cpp  Lista.cpp  Lupo.cpp  Medico.cpp  Medium.cpp  Personaggio.cpp  PersonaggioMagico.cpp  Veggente.cpp
FileH/: Artigliere.h  Giocatore.h  Lista.h  Lupo.h  Medico.h  Medium.h  Personaggio.h  PersonaggioMagico.h  Veggente.h
